base/todo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 80
      name: http
